# webgpu-cmake

./: CMakeLists.txt  CMakeLists_Dawn_simple.txt  build_win.bat  hello_webgpu.cpp  hello_webgpu_c.cpp
